--- a/#source/index.html
+++ b/#source/index.html
@@ -289,9 +289,9 @@
         <div class="content">
             <div class="container" >
                             <div class="box">
-                                <h1  data-aos="slide-right"  data-aos-delay="600">Изготовление корпусной и встроенной мебели</h1>
-                                <p  data-aos="slide-right"  data-aos-delay="900">На заказ по индивидуальным проектам</p>
-                                <div class="btn-box d-flex"  data-aos="slide-right" data-aos-delay="1000">
+                                <h1  data-aos="fade-right"  data-aos-delay="600">Изготовление корпусной и встроенной мебели</h1>
+                                <p  data-aos="fade-right"  data-aos-delay="900">На заказ по индивидуальным проектам</p>
+                                <div class="btn-box d-flex"  data-aos="fade-right" data-aos-delay="1000">
                                     <div class="btn-1">
                                         <a class="first popup-with-form" href="#froze">Вызвать на замер</a>
                                     </div>
@@ -305,10 +305,10 @@
     </section>
     <section id="home-btn-mobile">
         <div class="container">
-            <div class="btn-1">
+            <div class="btn-1" data-aos="fade-right" data-aos-delay="1000">
                 <a href="#froze" class="popup-with-form">Вызвать на замер</a>
             </div>
-            <div class="btn-2">
+            <div class="btn-2" data-aos="fade-right" data-aos-delay="1100">
                 <a href="#send" class="popup-with-form">Отправить фото или проект и узнать стоимость</a>
             </div>
         </div>
@@ -464,10 +464,10 @@
     </section>
     <section id="design-project">
         <div class="container">
-            <h2 class="section-title pc" data-aos="slide-right" data-aos-delay="300">
+            <h2 class="section-title pc" data-aos="fade-right" data-aos-delay="300">
                 Создадим дизайн-проект мебели <br> по вашим фото
             </h2>
-            <h2 class="section-title mobile" data-aos="slide-right" data-aos-offset="0" data-aos-delay="300">
+            <h2 class="section-title mobile" data-aos="fade-right" data-aos-offset="0" data-aos-delay="300">
                 Создадим дизайн-проект мебели по вашим фото
             </h2>
             <p class="section-subtitle" data-aos="slide-right" data-aos-delay="1600">
@@ -480,9 +480,9 @@
     </section>
     <section id="portfolio">
         <div class="container">
-            <h2 class="section-title" data-aos="slide-right" data-aos-delay="300">Портфолио наших проектов</h2>
-            <p class="section-subtitle pc" data-aos="slide-right" data-aos-delay="1000">Более 1000 довольных клиентов за 12 лет работы</p>
-            <p class="section-subtitle mobile" data-aos="slide-right" data-aos-delay="1000">Более 1000 довольных клиентов <br> за 12 лет работы</p>
+            <h2 class="section-title" data-aos="fade-right" data-aos-delay="300">Портфолио наших проектов</h2>
+            <p class="section-subtitle pc" data-aos="fade-right" data-aos-delay="1000">Более 1000 довольных клиентов за 12 лет работы</p>
+            <p class="section-subtitle mobile" data-aos="fade-right" data-aos-delay="1000">Более 1000 довольных клиентов <br> за 12 лет работы</p>
             <div class="row">
                 <div class="col-lg-3 col-md-4 col-sm-6 col-6" data-aos="fade-left" data-aos-delay="1000">
                     <div class="box">
