--- a/#source/index.html
+++ b/#source/index.html
@@ -470,7 +470,7 @@
             <h2 class="section-title mobile" data-aos="fade-right" data-aos-offset="0" data-aos-delay="300">
                 Создадим дизайн-проект мебели по вашим фото
             </h2>
-            <p class="section-subtitle" data-aos="slide-right" data-aos-delay="1600">
+            <p class="section-subtitle" data-aos="fade-right" data-aos-delay="1600">
                 Пришлите нам фотографии мебели, которая вам нравится, <br> и мы адаптируем ее под ваше помещение и бюджет
             </p>
             <div class="btn-1" data-aos="fade-left" data-aos-delay="100">
