--- a/index.html
+++ b/index.html
@@ -67,18 +67,18 @@
 
                                 </div>
                             </div>
-                            <a href="#" class="burger-menu_link first">Главная</a>
-                            <a href="#" class="burger-menu_link second">Кухни</a>
-                            <a href="#" class="burger-menu_link second">Шкафы</a>
-                            <a href="#" class="burger-menu_link second">Гардеробные</a>
-                            <a href="#" class="burger-menu_link second">Прочее</a>
-                            <a href="#" class="burger-menu_link">Дизайн мебели и интерьера</a>
-                            <a href="#" class="burger-menu_link">Сотрудничество</a>
-                            <a href="#" class="burger-menu_link">Акция</a>
-                            <a href="#" class="burger-menu_link">О нас</a>
-                            <a href="#" class="burger-menu_link">Портфолио</a>
-                            <a href="#" class="burger-menu_link">Фурнитура</a>
-                            <a href="#" class="burger-menu_link">Материалы</a>
+                            <a  href="#" class="burger-menu_link caps first">Главная</a>
+                            <a  href="#" class="burger-menu_link caps second">Кухни</a>
+                            <a  href="#" class="burger-menu_link caps second">Шкафы</a>
+                            <a  href="#" class="burger-menu_link caps second">Гардеробные</a>
+                            <a  href="#" class="burger-menu_link caps second">Прочее</a>
+                            <a  href="#" class="burger-menu_link caps">Дизайн мебели и интерьера</a>
+                            <a  href="#" class="burger-menu_link">Сотрудничество</a>
+                            <a  href="#" class="burger-menu_link">Акция</a>
+                            <a  href="#" class="burger-menu_link">О нас</a>
+                            <a  href="#" class="burger-menu_link">Портфолио</a>
+                            <a  href="#" class="burger-menu_link">Фурнитура</a>
+                            <a  href="#" class="burger-menu_link">Материалы</a>
                             <div class="btn-1 first">
                                 <a class="popup-with-form" href="#consultation">Заказать консультацию</a>
                             </div>
@@ -357,7 +357,7 @@
                         <a href="#" class="scale">
                             <img class="scale" src="images/exclusive5.png" alt="">
                         </a>
-                        <a href="#">Мебель для гостиной</a>
+                        <a  class="tow-ver" href="#">Мебель для гостиной</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 col-6" data-aos="fade-left" data-aos-delay="700">
@@ -365,7 +365,7 @@
                         <a href="#" class="scale">
                             <img class="scale" src="images/exclusive6.png" alt="">
                         </a>
-                        <a href="#">Мебель для детской</a>
+                        <a  class="tow-ver" href="#">Мебель для детской</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 col-6" data-aos="fade-left" data-aos-delay="750">
@@ -373,7 +373,7 @@
                         <a href="#" class="scale">
                             <img class="scale" src="images/exclusive7.png" alt="">
                         </a>
-                        <a href="#">Мебель для ванной</a>
+                        <a  class="tow-ver" href="#">Мебель для ванной</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 col-6" data-aos="fade-left" data-aos-delay="800">
@@ -381,7 +381,7 @@
                         <a href="#" class="scale">
                             <img class="scale" src="images/exclusive8.png" alt="">
                         </a>
-                        <a href="#">Мебель для атмосферных напитков</a>
+                        <a  class="tow-ver" href="#">Мебель для атмосферных напитков</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 col-6" data-aos="fade-left" data-aos-delay="850">
@@ -433,7 +433,7 @@
             <div class="row no-gutters">
                 <div class="col-lg-6">
                 </div>
-                <div class="col-lg-6" data-aos="fade-left" data-aos-delay="500">
+                <div class="col-lg-5" data-aos="fade-left" data-aos-delay="500">
                     <div class="box">
                         <div class="items" data-aos="fade-left" data-aos-delay="600">
                             <img src="images/Group%201282.svg" alt="">
@@ -575,9 +575,7 @@
             <h2 class="section-title" data-aos="slide-right" data-aos-delay="300" >
                 Материалы и фурнитура
             </h2>
-            <div class="row justify-content-center">
-                <div class="col-lg-6 col-md-6 col-12" data-aos="fade-right" data-aos-delay="800">
-                    <div class="box">
+                    <div class="box"  data-aos="fade-right" data-aos-delay="800">
                         <img src="images/quality-icon.svg" alt="">
                         <p>
                             Мы используем только качественные
@@ -585,8 +583,6 @@
                             за которую можем поручиться!
                         </p>
                     </div>
-                </div>
-            </div>
             <div class="btn-1" >
                 <a data-aos="fade-left" data-aos-delay="400" href="#">Смотреть все материалы</a>
                 <a data-aos="fade-left" data-aos-delay="500" href="#">Смотреть всю фурнитуру</a>
@@ -600,7 +596,7 @@
                 Подпишитесь на нас в социальных сетях и будьте в курсе последних обновлений
             </p>
             <div class="row no-gutters">
-                <div class="col-lg-6" data-aos="fade-right" data-aos-delay="900">
+                <div class="col-lg-5" data-aos="fade-right" data-aos-delay="900">
                     <div class="box">
                         <div class="items" data-aos="fade-right" data-aos-delay="1100">
                             <img src="images/Group%201282.svg" alt="">
@@ -725,12 +721,10 @@
     <section id="about">
         <div class="container">
             <h2 class="section-title"  data-aos="fade-right" data-aos-delay="600">
-                Производство мебели-работа <br> и хобби нашей команды</h2>
+                Производство мебели-работа  и хобби нашей команды</h2>
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="box-img">
-                        <img src="images/Слой%201.png" alt="">
-                    </div>
+
                 </div>
                 <div class="col-lg-6">
                     <div class="box">
@@ -799,7 +793,7 @@
                 <div class="col-lg-4" data-aos="fade-left" data-aos-delay="1000">
                     <div class="box firts">
                         <p class="box-title">
-                            Опыт работы <br> более 12 лет
+                            Опыт работы  более 12 лет
                         </p>
                         <p class="description">Мы в компетенции решить даже
                             самые сложные и невыполнимые задачи</p>
@@ -817,7 +811,7 @@
                 <div class="col-lg-4" data-aos="fade-left" data-aos-delay="1200">
                     <div class="box third">
                         <p class="box-title">
-                            Работаем <br> без салона
+                            Работаем  без салона
                         </p>
                         <p class="description">Это позволяет сделать для вас
                             лучшую цену, не закладывая в нее стоимость аренды</p>
@@ -844,7 +838,7 @@
                 <div class="col-lg-4" data-aos="fade-left" data-aos-delay="1500">
                     <div class="box six">
                         <p class="box-title">
-                            Аккуратная сборка <br> и монтаж
+                            Аккуратная сборка и монтаж
                         </p>
                         <p class="description">Мы — перфекционисты! Любое изделие, за которое мы
                             беремся, всегда доводим до совершенства</p>
@@ -1084,8 +1078,8 @@
         <div class="container">
             <h2 class="section-title" data-aos="fade-right" data-aos-delay="500">
                 Часто задаваемые вопросы</h2>
-            <div class="row justify-content-center">
-                <div class="col-lg-8 col-md-12 col-sm-12 col-12">
+            <div class="row justify-content-between">
+                <div class="col-lg-7 col-md-12 col-sm-12 col-12">
                     <div class="accordion-wrapper">
                         <div data-aos="fade-right" data-aos-delay="700" class="accordion">
                         <div class="accordion-header">
@@ -1301,9 +1295,7 @@
                 </div>
             </div>
             <div class="map">
-                <iframe frameborder="0"
-                        src="https://yandex.ru/map-widget/v1/?um=constructor%3Abc7a9e4abeeb0c68c9868f033cde20d51c2cbd88e53907c89b2c001fea99a79f&amp;source=constructor"
-                        ></iframe>
+                <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Abc7a9e4abeeb0c68c9868f033cde20d51c2cbd88e53907c89b2c001fea99a79f&amp;source=constructor"></iframe>
             </div>
             <div class="video">
                 <img src="images/video.png" alt="">
@@ -1333,7 +1325,7 @@
                 <p class="section-title">
                     Пожалуйста, заполните форму
                 </p>
-            <p>Мы свяжемся с вами в течение 15 минут и подробно все расскажем</p>
+            <p class="description">Мы свяжемся с вами в течение 15 минут и подробно все расскажем</p>
             <form action="">
                 <input type="text" placeholder="Ваше имя">
                 <input type="text" placeholder="+375 (ХХ) ХХХ-ХХ-ХХ">
@@ -1353,7 +1345,7 @@
             <p class="section-title">
                 Пожалуйста, заполните форму
             </p>
-            <p>Мы свяжемся с вами в течение 15 минут и согласуем удобное для вас время</p>
+            <p class="description">Мы свяжемся с вами в течение 15 минут и согласуем удобное для вас время</p>
             <form action="">
                 <input type="text" placeholder="Ваше имя">
                 <input type="text" placeholder="+375 (ХХ) ХХХ-ХХ-ХХ">
@@ -1374,7 +1366,7 @@
                 <p class=" section-title">
                     Пожалуйста, заполните форму
                 </p>
-                <p class="">Мы свяжемся с вами в течение 15 минут и подробно обсудим ваш проект</p>
+                <p class="description">Мы свяжемся с вами в течение 15 минут и подробно обсудим ваш проект</p>
             </div>
                 <form action="">
 
