--- a/index.html
+++ b/index.html
@@ -942,7 +942,7 @@
             <p class="section-subtitle" data-aos="fade-right" data-aos-delay="500">
                 Любая работа начинается с проекта
             </p>
-            <div class="row">
+            <div class="row justify-content-between">
                 <div class="col-lg-6" data-aos="fade-right" data-aos-delay="1000">
                     <div class="box">
                         <h3 class="box-title">
@@ -1415,9 +1415,9 @@
             <p class="description">Мы свяжемся с вами в течение 15 минут и подробно все расскажем</p>
             <form action="">
                 <input type="text" placeholder="Ваше имя">
-                <input type="text" placeholder="+375 (ХХ) ХХХ-ХХ-ХХ">
+                <input class="tel" type="tel" placeholder="+375 (ХХ) ХХХ-ХХ-ХХ">
                 <div class="btn-1">
-                    <a href="#">Заказать консультацию</a>
+                    <button type="submit">Заказать консультацию</button>
                 </div>
             </form>
 
@@ -1437,7 +1437,7 @@
                 <input type="text" placeholder="Ваше имя">
                 <input type="text" placeholder="+375 (ХХ) ХХХ-ХХ-ХХ">
                 <div class="btn-1">
-                    <a href="#">Вызвать дизайнера-замерщика</a>
+                    <button type="submit">Вызвать дизайнера-замерщика</button>
                 </div>
             </form>
 
@@ -1470,7 +1470,7 @@
                 </div>
 
                 <div class="btn-1">
-                    <a href="#">Рассчитать стоимость</a>
+                    <button type="submit" >Рассчитать стоимость</button>
                 </div>
             </form>
         </div>
