--- a/index.html
+++ b/index.html
@@ -272,108 +272,27 @@
     <section id="home">
         <div class="home-slider owl-carousel owl-theme">
             <div class="items">
-               <div class="container">
-                    <div class="box">
-                    <h1  data-aos="fade-right"  data-aos-delay="600">Изготовление корпусной и встроенной мебели</h1>
-                    <p  data-aos="fade-right"  data-aos-delay="900">На заказ по индивидуальным проектам</p>
-                    <div class="btn-box d-flex"  data-aos="fade-right" data-aos-delay="1000">
-                        <div class="btn-1">
-                            <a class="first popup-with-form" href="#froze">Вызвать на замер</a>
-                        </div>
-                        <div class="btn-1">
-                            <a class="second popup-with-form" href="#send">Отправить фото или проект и узнать стоимость</a>
-                        </div>
-                    </div>
-                </div>
-               </div>
+
             </div>
             <div class="items second">
-                <div class="container">
-                     <div class="box">
-                    <h1  data-aos="fade-right"  data-aos-delay="600">Изготовление корпусной и встроенной мебели</h1>
-                    <p  data-aos="fade-right"  data-aos-delay="900">На заказ по индивидуальным проектам</p>
-                    <div class="btn-box d-flex"  data-aos="fade-right" data-aos-delay="1000">
-                        <div class="btn-1">
-                            <a class="first popup-with-form" href="#froze">Вызвать на замер</a>
-                        </div>
-                        <div class="btn-1">
-                            <a class="second popup-with-form" href="#send">Отправить фото или проект и узнать стоимость</a>
-                        </div>
-                    </div>
-                </div>
-                </div>
+
             </div>
             <div class="items third">
-                <div class="container">
-                     <div class="box">
-                    <h1  data-aos="fade-right"  data-aos-delay="600">Изготовление корпусной и встроенной мебели</h1>
-                    <p  data-aos="fade-right"  data-aos-delay="900">На заказ по индивидуальным проектам</p>
-                    <div class="btn-box d-flex"  data-aos="fade-right" data-aos-delay="1000">
-                        <div class="btn-1">
-                            <a class="first popup-with-form" href="#froze">Вызвать на замер</a>
-                        </div>
-                        <div class="btn-1">
-                            <a class="second popup-with-form" href="#send">Отправить фото или проект и узнать стоимость</a>
-                        </div>
-                    </div>
-                </div>
-                </div>
-
             </div>
             <div class="items four">
-                <div class="container">
-                     <div class="box">
-                    <h1  data-aos="fade-right"  data-aos-delay="600">Изготовление корпусной и встроенной мебели</h1>
-                    <p  data-aos="fade-right"  data-aos-delay="900">На заказ по индивидуальным проектам</p>
-                    <div class="btn-box d-flex"  data-aos="fade-right" data-aos-delay="1000">
-                        <div class="btn-1">
-                            <a class="first popup-with-form" href="#froze">Вызвать на замер</a>
-                        </div>
-                        <div class="btn-1">
-                            <a class="second popup-with-form" href="#send">Отправить фото или проект и узнать стоимость</a>
-                        </div>
-                    </div>
-                </div>
-                </div>
-
             </div>
             <div class="items five">
-                <div class="container">
-                     <div class="box">
-                    <h1  data-aos="fade-right"  data-aos-delay="600">Изготовление корпусной и встроенной мебели</h1>
-                    <p  data-aos="fade-right"  data-aos-delay="900">На заказ по индивидуальным проектам</p>
-                    <div class="btn-box d-flex"  data-aos="fade-right" data-aos-delay="1000">
-                        <div class="btn-1">
-                            <a class="first popup-with-form" href="#froze">Вызвать на замер</a>
-                        </div>
-                        <div class="btn-1">
-                            <a class="second popup-with-form" href="#send">Отправить фото или проект и узнать стоимость</a>
-                        </div>
-                    </div>
-                </div>
-                </div>
 
             </div>
             <div class="items six">
-                <div class="container">
-                     <div class="box">
-                    <h1  data-aos="fade-right"  data-aos-delay="600">Изготовление корпусной и встроенной мебели</h1>
-                    <p  data-aos="fade-right"  data-aos-delay="900">На заказ по индивидуальным проектам</p>
-                    <div class="btn-box d-flex"  data-aos="fade-right" data-aos-delay="1000">
-                        <div class="btn-1">
-                            <a class="first popup-with-form" href="#froze">Вызвать на замер</a>
-                        </div>
-                        <div class="btn-1">
-                            <a class="second popup-with-form" href="#send">Отправить фото или проект и узнать стоимость</a>
-                        </div>
-                    </div>
-                </div>
-                </div>
 
             </div>
             <div class="items seven">
-                <div class="container">
-                     <div class="box">
+            </div>
+        </div>
+        <div class="content">
+            <div class="container">
+                <div class="box">
                     <h1  data-aos="fade-right"  data-aos-delay="600">Изготовление корпусной и встроенной мебели</h1>
                     <p  data-aos="fade-right"  data-aos-delay="900">На заказ по индивидуальным проектам</p>
                     <div class="btn-box d-flex"  data-aos="fade-right" data-aos-delay="1000">
@@ -385,8 +304,6 @@
                         </div>
                     </div>
                 </div>
-                </div>
-
             </div>
         </div>
     </section>
@@ -460,7 +377,7 @@
                         <a href="#" class="scale">
                             <img class="scale" src="images/exclusive7.png" alt="">
                         </a>
-                        <a  class="tow-ver" href="#">Мебель для ванной</a>
+                        <a  class="tow-ver tow-ver1" href="#">Мебель для ванной</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 col-6" data-aos="fade-left" data-aos-delay="800">
@@ -468,7 +385,7 @@
                         <a href="#" class="scale">
                             <img class="scale" src="images/exclusive8.png" alt="">
                         </a>
-                        <a  class="tow-ver" href="#">Мебель для атмосферных напитков</a>
+                        <a  class="tow-ver tow-ver1" href="#">Мебель для атмосферных напитков</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 col-6" data-aos="fade-left" data-aos-delay="850">
@@ -678,7 +595,7 @@
     </section>
     <section id="social">
         <div class="container">
-            <h2 class="section-title" data-aos="fade-right" data-aos-delay="300">Вы еще не с нами?Присоединяйтесь</h2>
+            <h2 class="section-title" data-aos="fade-right" data-aos-delay="300">Вы еще не с нами?  Присоединяйтесь</h2>
             <p class="section-subtitle" data-aos="fade-right" data-aos-delay="600">
                 Подпишитесь на нас в социальных сетях и будьте в курсе последних обновлений
             </p>
@@ -1165,7 +1082,7 @@
         <div class="container">
             <h2 class="section-title" data-aos="fade-right" data-aos-delay="500">
                 Часто задаваемые вопросы</h2>
-            <div class="row justify-content-between">
+            <div class="row justify-content-between justify-content-md-center">
                 <div class="col-lg-7 col-md-12 col-sm-12 col-12">
                     <div class="accordion-wrapper">
                         <div data-aos="fade-right" data-aos-delay="700" class="accordion">
@@ -1455,8 +1372,7 @@
                 </p>
                 <p class="description">Мы свяжемся с вами в течение 15 минут и подробно обсудим ваш проект</p>
             </div>
-                <form action="">
-
+                <form id="popup-form" action="">
                 <div class="row">
                     <div class="col-lg-12 col-xl-6">
                         <input type="text" placeholder="Ваше имя">
@@ -1468,7 +1384,6 @@
                       </div>
                     </div>
                 </div>
-
                 <div class="btn-1">
                     <button type="submit" >Рассчитать стоимость</button>
                 </div>
@@ -1476,6 +1391,9 @@
         </div>
     </div>
     <button title="Close (Esc)" type="button" class="mfp-close">×</button>
+</div>
+<div id="popup-form-ok" class="popup-ok">
+    dadadad
 </div>
 <script
         src="https://code.jquery.com/jquery-3.5.1.js"
