--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                         <a href="#" class="scale">
                             <img class="scale" src="images/exclusive10.png" alt="">
                         </a>
-                        <a href="#">Стеновые панели и декор</a>
+                        <a class="tow-ver2" href="#">Стеновые панели и декор</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 col-6" data-aos="fade-left" data-aos-delay="950">
@@ -480,7 +480,7 @@
         <div class="container">
             <h2 class="section-title" data-aos="fade-right" data-aos-delay="300">Портфолио наших проектов</h2>
             <p class="section-subtitle pc" data-aos="fade-right" data-aos-delay="1000">Более 1000 довольных клиентов за 12 лет работы</p>
-            <p class="section-subtitle mobile" data-aos="fade-right" data-aos-delay="1000">Более 1000 довольных клиентов <br> за 12 лет работы</p>
+            <p class="section-subtitle mobile" data-aos="fade-right" data-aos-delay="1000">Более 1000 довольных клиентов  за 12 лет работы</p>
             <div class="row">
                 <div class="col-lg-3 col-md-4 col-sm-6 col-6" data-aos="fade-left" data-aos-delay="1000">
                     <div class="box">
@@ -1391,9 +1391,6 @@
         </div>
     </div>
     <button title="Close (Esc)" type="button" class="mfp-close">×</button>
-</div>
-<div id="popup-form-ok" class="popup-ok">
-    dadadad
 </div>
 <script
         src="https://code.jquery.com/jquery-3.5.1.js"
