--- a/index.html
+++ b/index.html
@@ -1082,7 +1082,7 @@
         <div class="container">
             <h2 class="section-title" data-aos="fade-right" data-aos-delay="500">
                 Часто задаваемые вопросы</h2>
-            <div class="row justify-content-between justify-content-md-center">
+            <div class="row row-question ">
                 <div class="col-lg-7 col-md-12 col-sm-12 col-12">
                     <div class="accordion-wrapper">
                         <div data-aos="fade-right" data-aos-delay="700" class="accordion">
